[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["bevy_window", "bevy_core_pipeline", "bevy_render", "bevy_pbr", "x11", "bevy_sprite"]}
bevy-inspector-egui = { version = "0.28.0", optional = true }
board_plugin = { path = "board_plugin" }

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[workspace]
members = [
    "board_plugin"
]
