[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", default-features = false}
bevy-inspector-egui = {version = "0.28.0", optional = true}
colored = {version = "2.1.0", optional = true}
rand = "0.8.5"
serde = "1.0.215"


[features]
default = []
debug = ["colored", "bevy-inspector-egui"]
